--- a/sources/generator.source.html
+++ b/sources/generator.source.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" gen-role="page" gen-page="form">
     <div class="page-header">
       <h1>Template generator</h1>
     </div>
@@ -19,8 +19,8 @@
     <form class="form-horizontal" id="generator-form">
       <h2>Mode</h2>
       <div>
-        <span class="btn btn-default btn-lg" gen-role="mode" gen-mode="arm">Azure Resource Manager template</span>
-        <span class="btn btn-default btn-lg" gen-role="mode" gen-mode="cloudconfig">Only cloud-config.yaml</span>
+        <span class="btn btn-default" gen-role="mode" gen-mode="arm">Azure Resource Manager template</span>
+        <span class="btn btn-default" gen-role="mode" gen-mode="cloudconfig">Only cloud-config.yaml</span>
       </div>
       
       <h2>Parameters</h2>
@@ -95,10 +95,16 @@
       
       <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9">
-          <button type="submit" class="btn btn-default">Generate</button>
+          <button type="submit" class="btn btn-primary">Generate</button>
         </div>
       </div>
     </form>
+  </div>
+  
+  <div class="container" gen-role="page" gen-page="output">
+    <div class="page-header">
+      <h1>Generated documents</h1>
+    </div>
   </div>
   
 <!-- jQuery -->
