--- a/sources/generator.source.html
+++ b/sources/generator.source.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <title>Bootstrap 101 Template</title>
+  <title>Template generator</title>
   
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -80,7 +80,7 @@
         <label for="vcpu-count" class="col-sm-3 control-label">Number of vCPUs per VM</label>
         <div class="col-sm-3">
           <input name="vcpu-count" id="vcpu-count" class="form-control" required type="number" value="1" min="0" max="32" />
-          <div class="small help-block">Number of vCPUs in each VM, for optimizing WSREP slave threads. If unsure, set this value to 0 (will use 1 slave thread).</div> 
+          <div class="small help-block">Number of vCPUs in each VM, for optimizing <em>wsrep</em> slave threads. If unsure, set this value to 0 (will use 1 slave thread).</div> 
         </div>
       </div>
       
