--- a/sources/generator.source.html
+++ b/sources/generator.source.html
@@ -46,7 +46,7 @@
         <label for="data-disks" class="col-sm-3 control-label">Number of data disks per node</label>
         <div class="col-sm-3">
           <select name="data-disks" id="data-disks" class="form-control" required></select>
-          <div class="small help-block">Stripe across N data disks, each one with 1,023GB size and 500 IOPs. Each VM size has a limit on number of data disks; please note that this setting may limit your ability to scale down a node.</div> 
+          <div class="small help-block">Stripe across N data disks, each one with 4,095GB max size and 500 IOPs. Each VM size has a limit on number of data disks; please note that this setting may limit your ability to scale down a node.</div> 
         </div>
       </div>
       <div class="form-group" gen-role="conditional-param" gen-mode="arm">
