--- a/sources/generator.source.html
+++ b/sources/generator.source.html
@@ -93,6 +93,16 @@
           <div class="small help-block">Number of vCPUs in each VM, for optimizing <em>wsrep</em> slave threads. If unsure, set this value to 0 (will use 1 slave thread).</div> 
         </div>
       </div>
+      <div class="form-group">
+        <label for="etcd-node-count" class="col-sm-3 control-label">MariaDB version</label>
+        <div class="col-sm-3">
+          <select name="mariadb-version" id="mariadb-version" class="form-control" required>
+            <option value="10.2" selected="selected">10.2</option>
+            <option value="10.1">10.1</option>
+          </select>
+          <div class="small help-block">You can pick a major version only; the Docker container will always pick the latest updates.</div>
+        </div>
+      </div>
       
       <h2>Optional parameters</h2>
       <div class="form-group">
